# src/application/routes.go
@@ -14,9 +14,7 @@ import (
 func SetupRoutes(app *fiber.App, handler handlers.Handler) {
 	api := app.Group("/api/v1")
 
-	api.Get("/healthCheck", func(c *fiber.Ctx) {
-		c.Status(200).Send("OK")
-	})
+	api.Get("/healthCheck", handler.Status)
 
 	api.Get("/supers", handler.Index)
 	api.Post("/supers", handler.Create)
