# src/docs/swagger.json
@@ -17,6 +17,26 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
+        "/api/v1/healthCheck": {
+            "get": {
+                "description": "Check application status",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "API Status",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/supers": {
             "get": {
                 "description": "list out all supers stored in database",
